# ConeScripts

./: .gitignore
Importer/: Importer.cabal
Importer/src/: CSV.hs  ConeDemo.hs  GalaxyZoo.hs  IconGuesser.hs  MainCSV.hs  MainGalaxy.hs  MainManipulator.hs  MainManual.hs  MainRDF.hs  MainReveal.hs  MainSpecies.hs  PeopleZoo.hs
Importer/src/Parser/: CSV.hs
Importer/testData/: Recruit_Ontologie.csv  Recruit_Ontologie.json  dbpedia_2015-04.json  feature.json  geospecies.nt.REMOVED.git-id  goals.json  modes.json  revealjs.json  scene3_1.json  scene4_1.json
ManualModel/: Main.hs  ManualModel.cabal  PeopleZoo.hs  exportModel.json  scene3_1.json  scene3_2.json
ModelManipulator/: ModelManipulator.cabal  test1.json
ModelManipulator/models/: age.json  attitudes.json  centers.json  colorscheme.scss  feature.json  goals.json  modes.json  roles.json
ModelManipulator/src/: Main.hs
RDFImporter/: RDFImporter.cabal
RDFImporter/src/: ConeDemo.hs  IconGuesser.hs  Main.hs  MainCSV.hs  MainManual.hs  MainRDF.hs
RDFImporter/testData/: Recruit_Ontologie.csv  Recruit_Ontologie.json  scene3_2.json
