
name:                ManualModel
version:             0.1.0.0
synopsis:            Comfortably define a ConeTree as Haskell values, and export as JSON model
-- description:
license:             AllRightsReserved
author:              mgore
maintainer:          mgoremeier@gmail.com
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable ModelManipulator
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:    base >=4.8 && <4.9,
                    ConeServer >= 0.0.2,
                    aeson >=0.8 && <0.10,
                    bytestring >=0.10,
                    text >= 1.2.2.0,
                    aeson-pretty >= 0.7.2,
                    unordered-containers,
                    vector,
                    directory,
                    random


  default-language:    Haskell2010
