name:                RDFImporter
version:             0.1.0.0
synopsis:            RDF Importer for ConeServer
homepage:            https://github.com/jutaro
license:             AllRightsReserved
author:              jutaro
maintainer:          juergen.nicklisch@symbolian.net
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
executable RDFImporter
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:     IconGuesser Parser.CSV

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  ghc-options:      -O2

  build-depends:    base >=4.8 && <4.9,
                    rdf4h >= 2,
                    ConeServer >= 0.0.2,
                    filepath >= 1.4,
                    aeson >=0.8 && <0.10,
                    bytestring >=0.10,
                    text >= 1.2.2.0,
                    aeson-pretty >= 0.7.2,
                    directory,
                    parsec 

  hs-source-dirs:      src

  default-language:    Haskell2010
